# rice-ch4-simulator

./: .gitignore  README.md  main.tf  pyproject.toml  rice_ch4_app.py  rice_ch4_params.py  style.css  user_data.sh  variables.tf
markdown/: home_content.md
